commit tree 34d72003c1f917c865ec71783c9cd0715b5ea6a7

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,34 @@
 <h1>Make your form here</h1>
+<form action="/pirates" method="POST">
+    <div>
+        <label>Pirate name:</label>
+        <input type="text" name="pirate[name]" >
+    </div>
+    <div>
+        <label>Pirate weight:</label>
+        <input type="text" name="pirate[weight]" >
+    </div>
+    <div>
+        <label>Pirate height:</label>
+        <input type="text" name="pirate[height]" >
+    </div>
+    <div>
+        <label>Ship name:</label>
+        <input type="text" name="pirate[ships][][name]" id="ship_name_1">
+        <label>Ship type:</label>
+        <input type="text" name="pirate[ships][][type]" id="ship_type_1">
+        <label>Ship booty:</label>
+        <input type="text" name="pirate[ships][][booty]" id="ship_booty_1">
+    </div>
+    <div>
+        <label>Ship name:</label>
+        <input type="text" name="pirate[ships][][name]" id="ship_name_2">
+        <label>Ship type:</label>
+        <input type="text" name="pirate[ships][][type]" id="ship_type_2">
+        <label>Ship booty:</label>
+        <input type="text" name="pirate[ships][][booty]" id="ship_booty_2">
+    </div>
+    <div style="text-align:center; padding: 10px">
+    <input type="submit" value="Submit">
+    </div>
+</form>
