--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,15 @@
 <h1>Display your Pirate here</h1>
+<p>Pirates name: <%= @new_pirate.name %></p>
+<p>Pirates weight: <%= @new_pirate.weight %></p>
+<p>Pirates height: <%= @new_pirate.height %></p>
 
 
 <h2>Display your first ship here</h2>
-
+<p>Ship name: <%= Ship.all[0].name %></p>
+<p>Ship type: <%= Ship.all[0].type %></p>
+<p>Ship booty: <%= Ship.all[0].booty %></p>
 
 <h2>Display your second ship here</h2>
+<p>Ship name: <%= Ship.all[1].name %></p>
+<p>Ship type: <%= Ship.all[1].type %></p>
+<p>Ship booty: <%= Ship.all[1].booty %></p>
